# er-outputs-secrets

./: .gitignore  Changelog.md  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  main.py  pr_check.sh  pyproject.toml
.tekton/: main-pull-request.yaml  main-push.yaml
dockerfiles/: Dockerfile
requirements/: requirements-dev.txt  requirements.txt
tests/: conftest.py  test_get_secret_name.py  test_main.py  test_read_outputs.py
