[project]
name = "er-outputs-secrets"
# keep in sync with Dockerfile
version = "0.2.1"
description = "Parse terraform outputs and create k8s secrets"
authors = [{ name = "AppSRE", email = "sd-app-sre@redhat.com" }]
license = { text = "MIT License" }
readme = "README.md"
requires-python = "~= 3.11.0"
dependencies = [
    # allow updates for patch versions only
    "anymarkup ~=0.8.1",
    "external-resources-io ~=0.3.2",
    "kubernetes ~=31.0.0",
    "pydantic ~=2.10.0",
]

[project.urls]
homepage = "https://github.com/app-sre/er-outputs-secretse"
repository = "https://github.com/app-sre/er-outputs-secretse"
documentation = "https://github.com/app-sre/er-outputs-secretse"

[dependency-groups]
dev = [
    # allow updates for minor versions
    "ruff ~=0.7",
    "mypy ~=1.13",
    "pytest ~=8.3",
    "pytest-cov ~=6.0",
]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = 'py311'
src = ["main"]
extend-exclude = [
    ".local", # used by poetry in local venv
    ".cache", # used by poetry in local venv
]
fix = true

[tool.ruff.lint]
preview = true
# defaults are ["E4", "E7", "E9", "F"]
extend-select = [
    # flake8 default rules
    "E1", # preview rule
    "E2", # preview rule
    "W",
    # isort
    "I",
    # pylint
    "PL",
    # pyupgrade
    "UP",
]
ignore = [
    "PLR0904", # Too many public methods
    "PLR0913", # Too many arguments
    "PLR0917", # Too many positional arguments
]
[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["main"]

# Mypy configuration
[tool.mypy]
files = ["main.py", "tests"]
enable_error_code = ["truthy-bool", "redundant-expr"]
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
# Below are all of the packages that don't implement stub packages. Mypy will throw an error if we don't ignore the
# missing imports. See: https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
module = ["kubernetes.*"]
ignore_missing_imports = true
