[project]
name = "er-outputs-secrets"
# keep in sync with Dockerfile
version = "0.2.3"
description = "Parse terraform outputs and create k8s secrets"
authors = [{ name = "AppSRE", email = "sd-app-sre@redhat.com" }]
license = { text = "MIT License" }
readme = "README.md"
requires-python = "~= 3.11.0"
dependencies = [
    "external-resources-io==0.6.1",
    "kubernetes==32.0.1",
    "pydantic==2.11.4",
]

[project.urls]
homepage = "https://github.com/app-sre/er-outputs-secretse"
repository = "https://github.com/app-sre/er-outputs-secretse"
documentation = "https://github.com/app-sre/er-outputs-secretse"

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "pytest-cov==6.1.1",
    "pytest==8.3.5",
    "ruff==0.11.8",
]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = 'py311'
src = ["main"]
extend-exclude = [
    ".local", # used by poetry in local venv
    ".cache", # used by poetry in local venv
]
fix = true

[tool.ruff.lint]
preview = true
# defaults are ["E4", "E7", "E9", "F"]
extend-select = [
    # flake8 default rules
    "E1", # preview rule
    "E2", # preview rule
    "W",
    # isort
    "I",
    # pylint
    "PL",
    # pyupgrade
    "UP",
]
ignore = [
    "PLR0904", # Too many public methods
    "PLR0913", # Too many arguments
    "PLR0917", # Too many positional arguments
]
[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["main"]

# Mypy configuration
[tool.mypy]
plugins = ["pydantic.mypy"]
files = ["main.py", "tests"]
enable_error_code = ["truthy-bool", "redundant-expr"]
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
# Below are all of the packages that don't implement stub packages. Mypy will throw an error if we don't ignore the
# missing imports. See: https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
module = ["kubernetes.*"]
ignore_missing_imports = true
